fix footer alignment

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -22,6 +22,7 @@
   color: #fff;
 }
 
+
 .footer-subscription-heading {
   margin-bottom: 24px;
   font-size: 24px;
@@ -123,16 +124,19 @@
   cursor: pointer;
 }
 
+
+
 .social-logo {
   color: #fff;
   justify-self: start;
+  margin-left: 20px;
   cursor: pointer;
   text-decoration: none;
   font-size: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 16px;
+  margin-bottom: 20px;
 }
 
 .website-rights {
@@ -141,3 +145,35 @@
   text-align: center;
 }
 
+@media (max-width: 820px) {
+  .footer-links {
+    padding-top: 2rem;
+  }
+
+  .footer-input {
+    width: 100%;
+  }
+
+  .btn {
+    width: 100%;
+  }
+
+  .footer-link-wrapper {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .social-media-wrap {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+
+@media(max-width:640px){
+  .footer-icon { 
+    margin-right: 20px;
+  }
+}
